# verdict

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: compare_models.py  run_evaluation.py
tests/: __init__.py  test_attacks.py  test_engine.py  test_judge.py  test_many_shot.py  test_report.py  test_scenarios.py  test_types.py
verdict/: __init__.py  api.py  cli.py  report.py
verdict/attacks/: __init__.py  base.py  crescendo.py  injection.py  many_shot.py  pair.py  templates.py
verdict/core/: __init__.py  engine.py  judge.py  target.py  types.py
verdict/scenarios/: __init__.py  harmbench.py
