[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verdict-redteam"
version = "0.1.0"
description = "Automated adversarial LLM evaluation and red-teaming platform — PAIR, Crescendo, prompt injection, semantic judging"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Hritik Datta", email = "hritikdatta2403@gmail.com" },
]
keywords = [
    "llm", "red-teaming", "adversarial", "safety", "alignment",
    "jailbreak", "evaluation", "PAIR", "prompt-injection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "litellm>=1.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
]

[project.scripts]
verdict = "verdict.cli:main"

[project.urls]
Homepage = "https://github.com/Hritikd/verdict"
Repository = "https://github.com/Hritikd/verdict"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501", "B008", "N812"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.hatch.build.targets.wheel]
packages = ["verdict"]
